syntax = "proto3";

option csharp_namespace = "Rebtel.LibraryManagement.GRPC";

package books;

import "google/protobuf/timestamp.proto";

// The books service definition.
service BooksService {
  // Gets the most loaned books within a date range
  rpc GetMostLoanedBooks (GetMostLoanedBooksRequest) returns (GetMostLoanedBooksResponse);
}

// Request message for getting most loaned books
message GetMostLoanedBooksRequest {
}

// Response message containing the list of most loaned books
message GetMostLoanedBooksResponse {
  repeated BookDto books = 1;
}

// User data transfer object
message BookDto {
  string Id = 1;
  string Title = 2;
  string Author = 3;
  string ISBN = 4;
}